--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
         <header>
             <!--el elemento hgroup ya no se usa; ver http://html5doctor.com/the-hgroup-element/ -->
-            <h1><a href="index.html">Desigualdad comunal</a></h1>
+            <h1><a href="index.html">Coronavirus en Chile</a></h1>
             <h3>Por segunda semana, Puente Alto es la comuna con más casos activos</h3>
             <h5>Carlos Said</h5>
             <hr>
