--- a/page-3.html
+++ b/page-3.html
@@ -32,11 +32,11 @@
     <div class="container">
         <header>
             <!--el elemento hgroup ya no se usa; ver http://html5doctor.com/the-hgroup-element/ -->
-            <h1><a href="index.html">Desigualdad comunal</a></h1>
+            <h1><a href="index.html">Coronavirus en Chile</a></h1>
         </header>
         <section>
-            <h2>Lorem ipsum dolor sit amet</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin rutrum malesuada velit pharetra porttitor. Nulla accumsan turpis mollis urna posuere, nec varius justo rhoncus. Vestibulum condimentum sollicitudin tempor. Ut sapien lacus, euismod ut condimentum eget, hendrerit non ligula. Cras vitae justo commodo, consequat risus eget, egestas lorem.</p>
+            <h2>Índice de cuidados intensivos</h2>
+            <p>TEXTO EXTRA EN CAMINO Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin rutrum malesuada velit pharetra porttitor. Nulla accumsan turpis mollis urna posuere, nec varius justo rhoncus. Vestibulum condimentum sollicitudin tempor. Ut sapien lacus, euismod ut condimentum eget, hendrerit non ligula. Cras vitae justo commodo, consequat risus eget, egestas lorem.</p>
             <p>Ventiladores más o ventiladores menos, el hecho es que aumentan los pacientes en Unidades de Cuidados Intensivos (UCI) en todo el país. El mayor aumento se observó en la región Metropolitana de Santiago durante la primera semana de abril. Este aumento también lo podemos observar en cuatro de las regiones chilenas con mayor cantidad de habitantes, después de la capital<sup><a href="#nota_al_pie">*</a></sup></p>
             <figure>
                 <canvas id="uci"></canvas>
