--- a/page-1.html
+++ b/page-1.html
@@ -20,7 +20,7 @@
     </nav>
     <div class="container">
         <header>
-            <h1><a href="index.html">Desigualdad comunal</a></h1>
+            <h1><a href="index.html">Coronavirus en Chile</a></h1>
         </header>
         <section>
             <h2>Dimensión comunal del país</h2>
