--- a/page-2.html
+++ b/page-2.html
@@ -73,7 +73,7 @@
                 </tfoot>
             </table>
 
-            <p>La tabla demuestra también un preocupante aumento en la proporción de contagiados por sobre los recuperados, puesto que informa que PERESE YA LE AGREGO MÁS TEXTO I'M UNINSPIRED</p>
+            <p>La tabla demuestra también un preocupante aumento en la proporción de contagiados por sobre los recuperados, puesto que informa que las medidas no han tenido un impacto tan destacable en los últimos meses, que según el gobierno, han hecho que aproximadamente la mitad de los casos se haya recuperado </p>
         </section>
         <footer>
             <hr>
