--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--agregar metadatos-->
-    <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
+    <style>
+        figure {
+            padding: 0.5rem 1rem;
+            overflow: hidden;
+        }     
+
+        figure figcaption {
+            margin: 0rem -0.5em -0.5em -0.5em;
+            padding-top:0.5rem;
+        }
+    </style>
     <title>Coronavirus Chile</title>
 </head>
 
