--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </section>
         <footer>
             <hr>
-            <p>Francisco Pezoa &copy; 2020 <span class="derecha">Séptima clase, enfocada en <abbr title="HyperText Markup Language">html</abbr></span></p>
+            <p>Francisco Pezoa &copy; 2020 <span class="derecha">Octava clase, enfocada en <abbr title="Cascading Style Sheets">css</abbr></span></p>
         </footer>
     </div>
 </body>
